@@ -1,6 +1,7 @@
 Revision history for Perl extension {{$dist->name}}
 
 {{$NEXT}}
+    - now properly calls fatpack trace, packlists-for, tree and file
 
 1.100840  2010-03-25 11:48:24 Europe/Vienna
     - original version
